--- a/home.html
+++ b/home.html
@@ -15,24 +15,45 @@
 	</nav>
 
 	<content>
-		<h1>Welcome to this little website.</h1>
-		<!-- insert hello world here -->
-
-		<img src="https://pbs.twimg.com/profile_images/1267905793610772480/rks7KARB_400x400.jpg">
-
-		<h2>Contact Us</h2>
-		<form id="contact">
-			Your name:
-			<input type="text">
-
-			Message:
-			<input type="textarea">
-
-			<input type="submit">
-
-
-		</form>
-
+		<div class='text-content'> 
+			<h1>Hello & Welcome to Cat Support</h1>
+			<p>
+				This is a website for your cat needs, if you have any questions, feel free to ask us. We know having a cat can have its hassles, that is why we are here for a 24/7 support.
+			</p>
+		</div>
+		<div class="image-list">
+			<img 
+			src="./cat.jpeg"
+			alt='cat image'
+			style='
+				height: 350px;
+				width: 400px;
+				border-radius: 50%;
+				'
+			>
+			<ul>
+				<li>You are supported here!</li>
+				<li>You can do it!</li>
+				<li>We are here for you</li>
+			</ul>
+		</div>
+		
+		<div class='contact-form'>
+			<h2>Contact Us</h2>
+			<form id="contact">
+				Your name:
+				<input type="text">
+	
+				Message:
+				<input type="textarea">
+				<input type="submit">
+				<div class='checkbox'>
+					<input type="checkbox" name="option1" value="chocolate" /> Google
+					<input type="checkbox" name="option2" value="vanilla" /> Friend
+					<input type="checkbox" name="option3" value="mint" /> Other
+				</div>
+			</form>
+		</div>
 	</content>
 
 
