--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,89 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Homepage</title>
+	<link href="styles.css" rel="stylesheet">
 
-<br>
-<br>
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="dropdown" class="navbar">    
+        <div class="max-width">
+                <div class="dropdown-content">
+                    <ul class="menu">
+                        <li><a href="./home.html" class="menu-btn">Home</a></li>
+                        <li><a href="./about.html">About</a></li>
+                    </ul>
+                </div> 
+            </div>
+        </div>
+    </nav>
 
-<a href="./home.html"><< Back </a>
+    <!-- abouts section -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About Me</h2>
+            <div class="about-content">
+                <div class="column right">
+                    <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
+                    <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
+                    <a href="#portfolio">Check out my previous work!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     <!-- skills section -->
+     <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                        <div class="text">My creative skills & experiences.</div>
+                        <p>I am a newbie in the tech world. However in the past 2 years that I have entered the tech world, and the world of programming I have been able to attain these skills, they will of course be ever growing and improving with time and experience.</p>
+                        <a href="#projects">See Project Examples</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>40%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Swift</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line swift"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>5%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</body>
+
+<a href="./home.html"></a>
