add interests section

--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,6 @@
                 <div class="column right">
                     <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
                     <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
-                    <a href="#portfolio">Check out my previous work!</a>
                 </div>
             </div>
         </div>
@@ -41,7 +40,6 @@
                 <div class="column left">
                         <div class="text">My creative skills & experiences.</div>
                         <p>I am a newbie in the tech world. However in the past 2 years that I have entered the tech world, and the world of programming I have been able to attain these skills, they will of course be ever growing and improving with time and experience.</p>
-                        <a href="#projects">See Project Examples</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -84,6 +82,18 @@
         </div>
     </section>
 
+    <section class="interests" id="interests">
+        <div class="max-width">
+            <h2 class="title">My Interests</h2>
+            <div class="about-content">
+                <div class="column right">
+                    <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
+                    <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 
 <a href="./home.html"></a>
