change contact me section

--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="dropdown" class="navbar">    
+    <nav class="nav" class="navbar">    
         <div class="max-width">
                 <div class="dropdown-content">
                     <ul class="menu">
