--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="dropdown" class="navbar">    
+    <nav class="nav" class="navbar">    
         <div class="max-width">
                 <div class="dropdown-content">
                     <ul class="menu">
@@ -20,7 +20,6 @@
         </div>
     </nav>
 
-	<content>
 		<div class='text-content'> 
 			<h1>Hello & Welcome to Cat Support</h1>
 			<p>
@@ -61,7 +60,60 @@
 				</div>
 			</form>
 		</div>
-	</content>
+	<!-- contact section -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Feel free to get in touch with me, ask me questions and let me know if you like the stuff that you saw!</p>
+                <div class="icons">
+                    <div class="row">
+                        <div class="info">
+                        <div class="head">Name</div>
+                        <div class="sub-title">Mehdi Safari</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="info">
+                        <div class="head">Address</div>
+                        <div class="sub-title">San Francisco, California</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="info">
+                        <div class="head">Email</div>
+                        <div class="sub-title">sa.mehdisafari@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column right">
+            <div class="text">Message me</div>
+                <form action="#">
+                    <div class="fields">
+                        <div class="field name">
+                            <input type="text" placeholder="Name" required>
+                        </div>
+                        <div class="field email">
+                            <input type="email" placeholder="Email" required>
+                        </div>
+                    </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 	<script src="about.js"></script>
