edit top home section

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Homepage</title>
 	<link href="styles.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
 </head>
 <body>
@@ -26,40 +27,28 @@
 				This is a website for your cat needs, if you have any questions, feel free to ask us. We know having a cat can have its hassles, that is why we are here for a 24/7 support.
 			</p>
 		</div>
-		<div class="image-list">
-			<img
-			id='cat-image'
-			src="./cat.jpeg"
-			alt='cat image'
-			style='
-				height: 350px;
-				width: 400px;
-				border-radius: 50%;
-				'
-			>
 			<ul>
 				<li>You are supported here!</li>
 				<li>You can do it!</li>
 				<li>We are here for you</li>
 			</ul>
 		</div>
-		
-		<div class='contact-form'>
-			<h2>Contact Us</h2>
-			<form id="contact">
-				Your name:
-				<input type="text">
-	
-				Message:
-				<input type="textarea">
-				<input type="submit">
-				<div class='checkbox'>
-					<input type="checkbox" name="option1" value="chocolate" /> Google
-					<input type="checkbox" name="option2" value="vanilla" /> Friend
-					<input type="checkbox" name="option3" value="mint" /> Other
-				</div>
-			</form>
+
+	<!-- home section -->
+	<section class="home" id="home">
+		<div class="max-width">
+			<div class="column left">
+				<img src="./cat.jpeg" alt="">
+			</div>
+			<div class="home-content">
+				<div class="text-1">Hello, & Welcome!</div>
+				<div class="text-2">To Catopia</div>
+				<div class="text-3">And I'm a <span class="typing"></span></div>
+				<a href="#portfolio">Previous Work</a>
+			</div>
 		</div>
+	</section>
+
 	<!-- contact section -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -109,6 +98,12 @@
                         <div class="button-area">
                             <button type="submit">Send message</button>
                         </div>
+						<div class="text" style='margin-top: 30px;'>Where did you hear about us?</div>
+						<div class='checkbox'>
+							<input type="checkbox" name="option1" value="chocolate" /> Google
+							<input type="checkbox" name="option2" value="vanilla" /> Friend
+							<input type="checkbox" name="option3" value="mint" /> Other
+						</div>
                     </form>
                 </div>
             </div>
