--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <div class="max-width">
                 <div class="dropdown-content">
                     <ul class="menu">
-                        <li><a href="./home.html" class="menu-btn">Home</a></li>
+                        <li><a href="./home.html" class="menu-btn" >Home</a></li>
                         <li><a href="./about.html">About</a></li>
 						<li><a href="./profile.html">Founder Profile</a></li>
                     </ul>
@@ -20,19 +20,6 @@
             </div>
         </div>
     </nav>
-
-		<div class='text-content'> 
-			<h1>Hello & Welcome to Cat Support</h1>
-			<p>
-				This is a website for your cat needs, if you have any questions, feel free to ask us. We know having a cat can have its hassles, that is why we are here for a 24/7 support.
-			</p>
-		</div>
-			<ul>
-				<li>You are supported here!</li>
-				<li>You can do it!</li>
-				<li>We are here for you</li>
-			</ul>
-		</div>
 
 	<!-- home section -->
 	<section class="home" id="home">
@@ -43,16 +30,26 @@
 			<div class="home-content">
 				<div class="text-1">Hello, & Welcome!</div>
 				<div class="text-2">To Catopia</div>
-				<div class="text-3">And I'm a <span class="typing"></span></div>
-				<a href="#portfolio">Previous Work</a>
+				<div class="text-3">A Place for all Cat Lovers.
+				<a href="./about.html">Learn More</a>
 			</div>
 		</div>
 	</section>
-
+	<Section>
+		<div class="max-width">
+			<h2 class="title" style='color: #fff'>Support Messages</h2>
+			<ul class='compliment'>
+				<li class='text-1'>You are supported here!</li>
+				<li class='text-1'>You can do it!</li>
+				<li class='text-1'>We are here for you</li>
+			</ul>
+		</div>
+	</Section>
+	
 	<!-- contact section -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title" >Contact me</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
