add alerts, and edit contact form

--- a/profile.html
+++ b/profile.html
@@ -27,6 +27,12 @@
                 <div class="column right">
                     <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
                     <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
+                    <div class='button-container' style='margin-top: 20px;'>
+                        <button id="color">My Favorite Color</button>
+                        <button id="place">My Favorite Place</button>
+                        <button id="ritual">My Favorite Ritual</button>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -93,6 +99,7 @@
             </div>
         </div>
     </section>
+    <script src='./profile.js'></script>
 </body>
 
 
