--- a/home.html
+++ b/home.html
@@ -49,34 +49,14 @@
 	<!-- contact section -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title" >Contact me</h2>
+            <h2 class="title" >Contact Us</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Feel free to get in touch with me, ask me questions and let me know if you like the stuff that you saw!</p>
-                <div class="icons">
-                    <div class="row">
-                        <div class="info">
-                        <div class="head">Name</div>
-                        <div class="sub-title">Mehdi Safari</div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="info">
-                        <div class="head">Address</div>
-                        <div class="sub-title">San Francisco, California</div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="info">
-                        <div class="head">Email</div>
-                        <div class="sub-title">sa.mehdisafari@gmail.com</div>
-                    </div>
-                </div>
-            </div>
+                    <div class="text-1">Get in Touch</div>
+                    <p>Feel free to get in touch with us, to ask questions, and we will get  back to you!</p>
+
         </div>
         <div class="column right">
-            <div class="text">Message me</div>
                 <form action="#">
                     <div class="fields">
                         <div class="field name">
@@ -93,7 +73,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button id='send' type="submit">Send message</button>
                         </div>
 						<div class="text" style='margin-top: 30px;'>Where did you hear about us?</div>
 						<div class='checkbox'>
