--- a/about.html
+++ b/about.html
@@ -19,17 +19,14 @@
     </nav>
 
 	<!-- abouts section -->
-    <section class="about" id="about">
+    <section class="about-us" id="about-us">
         <div class="max-width">
-            <h2 class="title">About Me</h2>
+            <h2 class="title">About Catopia</h2>
             <div class="about-content">
                 <div class="column right">
-                    <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
                     <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
                     <div class='button-container' style='margin-top: 20px;'>
-                        <button onclick='favClrAlert()' id="color">My Favorite Color</button>
-                        <button onclick='favPlcAlert()' id="place">My Favorite Place</button>
-                        <button onclick='favRtlAlert()' id="ritual">My Favorite Ritual</button>
+                        <button onclick='favClrAlert()' id="color">Opetating Locations</button>
                     </div>
                     
                 </div>
