--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
                 <div class="dropdown-content">
                     <ul class="menu">
                         <li><a href="./home.html" class="menu-btn" >Home</a></li>
-                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./about.html">About Us</a></li>
 						<li><a href="./profile.html">Founder Profile</a></li>
                     </ul>
                 </div> 
@@ -25,7 +25,11 @@
 	<section class="home" id="home">
 		<div class="max-width">
 			<div class="column left">
-				<img src="./cat.jpeg" alt="">
+				<img 
+					onmouseover='complimentMessage(this)' 
+					src="./cat.jpeg" 
+					alt=""
+				>
 			</div>
 			<div class="home-content">
 				<div class="text-1">Hello, & Welcome!</div>
@@ -85,7 +89,7 @@
     </section>
 
 
-	<script src="about.js"></script>
+	<script src="index.js"></script>
 
 </body>
 </html>
