--- a/profile.html
+++ b/profile.html
@@ -25,8 +25,8 @@
             <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column right">
-                    <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
-                    <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
+                    <div class="text-2">I'm Mehdi</div>
+                    <p>I am fullstack developer experienced in both mobile web applications. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
                     <div class='button-container' style='margin-top: 20px;'>
                         <button onclick='favClrAlert()' id="color">My Favorite Color</button>
                         <button onclick='favPlcAlert()' id="place">My Favorite Place</button>
@@ -41,45 +41,52 @@
      <!-- skills section -->
      <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">My Skills</h2>
             <div class="skills-content">
-                <div class="column left">
-                        <div class="text">My creative skills & experiences.</div>
-                        <p>I am a newbie in the tech world. However in the past 2 years that I have entered the tech world, and the world of programming I have been able to attain these skills, they will of course be ever growing and improving with time and experience.</p>
+                <div class="column">
+                        <div class="text-2">Creative skills & experiences.</div>
+                        <p>I'm a FullStack Web Developer with over 2 years of experience, below you can see my skills.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>30%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>40%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>10%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>React</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line react"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Swift</span>
-                            <span>70%</span>
+                            <span>65%</span>
                         </div>
                         <div class="line swift"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>5%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
