edit folder structure

--- a/client/about.html
+++ b/client/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>About</title>
-	<link href="styles.css" rel="stylesheet">
+	<link href="../assets/styling/styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
