--- a/client/profile.html
+++ b/client/profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Homepage</title>
-	<link href="styles.css" rel="stylesheet">
+	<link href="../assets/styling/styles.css" rel="stylesheet">
 
 </head>
 <body>
@@ -106,7 +106,7 @@
             </div>
         </div>
     </section>
-    <script src='./profile.js'></script>
+    <script src='../assets/js/profile.js'></script>
 </body>
 
 
