--- a/client/home.html
+++ b/client/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Homepage</title>
-	<link href="styles.css" rel="stylesheet">
+	<link href="../assets/styling/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
 </head>
@@ -27,7 +27,7 @@
 			<div class="column left">
 				<img 
 					onmouseover='complimentMessage(this)' 
-					src="./cat.jpeg" 
+					src="../assets/images/cat.jpeg" 
 					alt=""
 				>
 			</div>
@@ -91,7 +91,7 @@
     </section>
 
 
-	<script src="index.js"></script>
+	<script src="../assets/js/index.js"></script>
 
 </body>
 </html>
