--- a/client/profile.html
+++ b/client/profile.html
@@ -97,12 +97,15 @@
 
     <section class="interests" id="interests">
         <div class="max-width">
-            <h2 class="title">My Interests</h2>
+            <h2 class="title">My Interests & Career Goals</h2>
             <div class="about-content">
                 <div class="column right">
-                    <div class="text">I'm Mehdi and I'm a <span class="typing-2"></span></div>
-                    <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
-                </div>
+                    <div class="text-2" style='color: orange;'>Interests</div>
+                    <p>I love coding and enjot playing the piano in my free time or playing basketball with my friends. I also cherish family time a lot and try to spend as much time with them as possible.</p>
+                    </div>
+                    <div class="text-2" style='color: orange;'>Career Goals</div>
+                        <p>I am very passionate about mobile development, so my goals will be to get a job in the mobile app development side of programming. I want to be a very good developer in both the backend side of projects and frontend.</p>
+                    </div>
             </div>
         </div>
     </section>
