add initial location in neighorhodd

--- a/client/about.html
+++ b/client/about.html
@@ -26,12 +26,33 @@
                 <div class="column right">
                     <p>I am fullstack developer experienced in both mobile web applications, mainly swift for IOS and am in training for web application experience. I am based in San Francisco, CA. I really enjoy creative design alongside development processes in order to create unique and exciting products as an end result. I have been coding since 2 years now and am always learning new technologies and new ways to improve.</p>
                     <div class='button-container' style='margin-top: 20px;'>
-                        <button onclick='favClrAlert()' id="color">Opetating Locations</button>
+                        <button onclick='showLocations()' id="locations">View Locations</button>
                     </div>
                     
                 </div>
             </div>
         </div>
     </section>
+    <!-- abouts section -->
+    <section class="about-us" id="about-us">
+        <div class="max-width">
+            <h2 class="title">Locations</h2>
+            <div class="about-content">
+                <div class="column right">
+                    <p style='text-align: center;'>Below are two of our members' favorite locations </p>
+                    <div class='button-container' style='margin-top: 20px;'>
+                        <div class='location-box-container'>
+                            <div class='initial-box'></div>
+                            <div class='secondary-box'></div>
+                        </div>
+                    </div>
+                    <button><a href="./home.html" style='color: #fff;'>Back Home</a></button>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src='../assets/js/about.js'></script>
 </body>
 </html>
