--- a/client/about.html
+++ b/client/about.html
@@ -49,7 +49,7 @@
                                     </p>
                                 </div>
                             </button>
-                            <button onClick='' style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
+                            <button onClick='randomLocationSF()' id='secondary-box' style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
                                 <div class='secondary-box'>
                                     <p>
                                         San Francisco
