finish random selector

--- a/client/about.html
+++ b/client/about.html
@@ -42,7 +42,7 @@
                     <p style='text-align: center; margin-top: -20px;'>Below are three of our members' favorite locations. You can also get random restaurant locations in any of these places by tapping on their names. </p>
                     <div class='button-container' style='margin-top: 20px;'>
                         <div class='location-box-container'>
-                            <button style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
+                            <button onClick='randomNyLocation()' id='initial-box' style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
                                 <div class='initial-box'>
                                     <p>
                                         New York
@@ -56,7 +56,7 @@
                                     </p>
                             </div>
                             </button>
-                            <button style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
+                            <button onClick='randomLaLocation()' id='third-box' style='background-color: transparent;border: none; width: 120px !important; background-color: transparent; height: 100px; border-radius: 20px;'>
                                 <div class='third-box'>
                                     <p>
                                         Los Angeles
