add random park selector

--- a/client/about.html
+++ b/client/about.html
@@ -66,7 +66,7 @@
                         </div>
 
                     </div>
-                    <button style="margin-top: 30px;"><a href="./home.html" style='color: #fff;'>Random Resturants</a></button>
+                    <button id='random-park' onClick='randomParkSelector()' style="margin-top: 30px;">Random Parks</button>
                     
                 </div>
             </div>
