final styling edits

--- a/client/about.html
+++ b/client/about.html
@@ -20,7 +20,7 @@
 
 	<!-- abouts section -->
     <section class="about-us" id="about-us" style="display: flex; align-items: center; justify-content: center;">
-        <div class="max-width" style="margin-top: 30px; display: flex; flex-direction: column; align-items: center; justify-content: center; width: 700px !important">
+        <div class="max-width" style="margin-top: 90px; display: flex; flex-direction: column; align-items: center; justify-content: center; width: 700px !important">
             <h2 class="title">About Catopia</h2>
             <div class="about-content" style="margin-top: -30px;">
                 <div class="column right">
@@ -35,7 +35,7 @@
     </section>
     <!-- abouts section -->
     <section class="about-us" id="about-us">
-        <div class="max-width">
+        <div class="max-width" style="width: 600px;">
             <h2 class="title" >Locations</h2>
             <div class="about-content">
                 <div class="column right" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
